2011-09-11  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-phrase-prompt): New defconst.
	(debbugs-gnu-search): Use it.  Use `unwind-protect'.  Apply
	default values for "status".
	(debbugs-gnu): Fix `unwind-protect' form.
	(debbugs-gnu-mode-map): Do not define "q", it is derived from
	`special-mode'.

2011-09-09  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-search): Add full text search.
	(debbugs-gnu): Use `unwind-protect'.
	(debbugs-gnu-get-bugs): Call `debbugs-search-est' for full text
	search.

	* debbugs-pkg.el (top): Upgrade package version to 0.3.

2011-09-06  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs.el (debbugs-get-status): Handle the case of nil
	BUG-NUMBERS.

2011-08-12  Michael Albinus  <michael.albinus@gmx.de>

	* Debbugs.wsdl (ArrayOfArrayOfAnyType)
	(ArrayOfArrayOfArrayOfAnyType): New types.
	(search_estRequest, search_estResponse): New messages.
	(search_est): New operation.

	* debbugs.el (debbugs-search-est): New defun.

	* debbugs-pkg.el (top): Upgrade package version to 0.2.

2011-07-29  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-default-suppress-bugs)
	(debbugs-gnu-current-query): Expand docstring.
	(debbugs-gnu-current-filter): New defvar.
	(debbugs-gnu-calendar-read): New defun.
	(debbugs-gnu-current-severities, debbugs-gnu-current-packages)
	(debbugs-gnu-current-archive): Removed.
	(debbugs-gnu-search): Autoloaded.  Remove arguments.  Extend
	interactive queries.
	(debbugs-gnu): Autoloaded.  Use `debbugs-gnu-current-query'.  Set
	:filter in widgets.
	(debbugs-gnu-get-bugs): Add argument QUERY.  Rewrite.
	(debbugs-gnu-print-entry): Extend client-side filtering.

2011-07-21  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-search): Let-bind
	`debbugs-gnu-current-query'.
	(debbugs-gnu): Add attribute :query to the widgets.
	(debbugs-gnu-print-entry): Get query from `debbugs-gnu-current-widget'.