@@ -1,3 +1,8 @@
+2011-09-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* debbugs-gnu.el (debbugs-gnu-show-reports): Only list merged bugs
+	once.
+
 2011-09-11  Michael Albinus  <michael.albinus@gmx.de>
 
 	* debbugs-gnu.el (debbugs-gnu-phrase-prompt): New defconst.
